//noinspection GradleDependency
apply plugin: 'com.android.application'
apply plugin: 'com.google.firebase.firebase-perf'
apply plugin: 'com.google.firebase.crashlytics'


android {
    signingConfigs {
    }
    compileSdkVersion 30
    buildToolsVersion '29.0.3'
    useLibrary 'org.apache.http.legacy'

    useLibrary 'android.test.runner'

    useLibrary 'android.test.base'
    useLibrary 'android.test.mock'


    defaultConfig {
        applicationId "com.stonefacesoft.ottaa"
        minSdkVersion 21
        targetSdkVersion 30
        versionCode 84
        versionName "6.5.1" //
        // Enabling multidex support.
        multiDexEnabled = true
        resConfigs "ar,en,es,it"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"//
        testHandleProfiling true
        testFunctionalTest true
        testInstrumentationRunnerArguments clearPackageData: 'true'



    }
    dexOptions {
        incremental true
        preDexLibraries = false
        javaMaxHeapSize "4g" // 2g should be also OK
    }
    buildTypes {
        debug {
            minifyEnabled true
            applicationIdSuffix '.debug'
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            zipAlignEnabled true
            testCoverageEnabled true
        }
        sourceSets.debug.resources.srcDirs = ['src/debug/res']

        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            zipAlignEnabled true
        }
        lintOptions {
            abortOnError false
        }


    }
//    flavorDimensions "accessibility"
//    productFlavors {
//
//        demo {
//            // Assigns this product flavor to the "version" flavor dimension.
//            // If you are using only one dimension, this property is optional,
//            // and the plugin automatically assigns all the module's flavors to
//            // that dimension.
//            dimension "accesibility"
//            applicationIdSuffix ".demo"
//            versionNameSuffix "-demo"
//        }
//        full {
//            dimension "accesibility"
//            applicationIdSuffix ".full"
//            versionNameSuffix "-full"
//        }
//    }


//        packagingOptions {
//            exclude 'META-INF/LICENSE.txt'
//            exclude 'META-INF/NOTICE.txt'
//        }
    testOptions{
        unitTests.returnDefaultValues = true
        unitTests.includeAndroidResources true
        unitTests.all{
            jvmArgs '-XX:MaxPermSize=256m'
        }
        execution 'ANDROIDX_TEST_ORCHESTRATOR'
    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }

}

repositories {
    mavenCentral()
    maven() {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    maven { url "https://jitpack.io" }
    maven {
        url 'https://maven.google.com/'
        name 'Google'
    }
    jcenter()
}
dependencies {

//    testImplementation 'org.json:json:20180813'
    testImplementation "org.json:json:20180813"
    
    implementation fileTree(dir: 'libs', include: ['*.jar'])
//    implementation('com.github.worker8:tourguide:2.0.0-SNAPSHOT@aar') {
//        transitive = true
//    }

    implementation('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar') {
        transitive = true
    }

    // Required -- JUnit 4 framework
    implementation files('libs/SimpleNLG-4.4.8.jar')
    implementation('com.google.dagger:dagger:2.27') {
        // exclude group: 'com.google.guava'
    }


//    implementation('com.github.worker8:tourguide:2.0.0-SNAPSHOT@aar') {
//        transitive = true
//    }
    // Optional -- Mockito framework
    //androidx library
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'androidx.browser:browser:1.3.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation "androidx.core:core:1.3.2"
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'androidx.preference:preference:1.1.1'
    implementation 'androidx.recyclerview:recyclerview:1.2.0'
    // places library
    implementation 'com.google.android.libraries.places:places:2.4.0'
    //play services library
    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
    implementation 'com.google.android.gms:play-services-auth:19.0.0'
    implementation 'com.google.android.gms:play-services-base:17.6.0'
    implementation 'com.google.android.gms:play-services-location:18.0.0'

    //implementation
    implementation 'com.android.volley:volley:1.2.0'
    implementation 'com.airbnb.android:lottie:3.0.0'
    implementation 'io.github.kobakei:ratethisapp:1.2.0'
    implementation group: 'com.google.apis', name: 'google-api-services-translate', version: 'v2-rev48-1.22.0'
    implementation group: 'com.google.api-client', name: 'google-api-client-gson', version: '1.25.0'
    implementation 'androidx.navigation:navigation-fragment:2.3.5'
    implementation 'androidx.navigation:navigation-ui:2.3.5'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    testImplementation 'junit:junit:4.13.1'
    testImplementation "org.mockito:mockito-core:1.10.19"
    testImplementation "org.robolectric:robolectric:3.3.2"
    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'


    //Testing

    androidTestImplementation 'androidx.test:core:1.3.0'

    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'

    //Testing

    androidTestImplementation 'androidx.test:core:1.3.0'

    // AndroidJUnitRunner and JUnit Rules
    androidTestImplementation 'androidx.test:runner:1.3.0'
    androidTestImplementation 'androidx.test:rules:1.3.0'
    androidTestUtil 'androidx.test:orchestrator:1.1.0'


    // Assertions
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.ext:truth:1.3.0'
    androidTestImplementation 'com.google.truth:truth:1.0'

    // Espresso dependencies
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-web:3.3.0'
    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.3.0'

    // The following Espresso dependency can be either "implementation"
    // or "androidTestImplementation", depending on whether you want the
    // dependency to appear on your APK's compile classpath or the test APK
    // classpath.
    androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'


    // The following Espresso dependency can be either "implementation"
    // or "androidTestImplementation", depending on whether you want the
    // dependency to appear on your APK's compile classpath or the test APK
    // classpath.
    //
    implementation('com.google.code.findbugs:jsr305:3.0.2')
    implementation 'com.jakewharton:butterknife:9.0.0-rc2'

    //library
    implementation 'com.annimon:stream:1.2.1'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'com.github.skydoves:colorpickerpreference:1.0.7'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'

    // firebase library
    implementation 'com.google.firebase:firebase-auth:20.0.4'
    implementation 'com.google.firebase:firebase-config:20.0.4'
    implementation 'com.google.firebase:firebase-core:18.0.3'
    implementation 'com.google.firebase:firebase-database:19.7.0'
    implementation 'com.google.firebase:firebase-messaging:21.1.0'
    implementation 'com.google.firebase:firebase-inappmessaging-display:19.1.5'
    implementation 'com.google.firebase:firebase-perf:19.1.1'
    implementation 'com.google.firebase:firebase-storage:19.2.2'
    implementation 'com.firebaseui:firebase-ui-database:5.0.0'

    // Glide
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
    // material library
    implementation 'com.google.android.material:material:1.3.0'

    //Firebase chrashlitics
    implementation 'com.google.firebase:firebase-crashlytics:17.4.1'
    implementation 'com.google.firebase:firebase-analytics:18.0.3'
    //Guava library
    implementation("com.google.guava:guava:30.1.1-android")
    //Facebook
    implementation 'com.facebook.android:facebook-android-sdk:8.1.0'
    implementation 'com.facebook.android:facebook-core:8.1.0'

    //Image Cropper
    //TODO add this library to the Wiki
    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
    implementation 'com.github.OTTAA-Project:PictogramsLibrary:0.1.7'
    //Sendgrid integration

}


configurations {
    all {
        exclude module: 'httpclient'
    }
}

/*
configurations.all {
    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        def requested = details.requested
        if (requested.group == 'com.android.support') {
            if (!requested.name.startsWith("multidex")) {
                details.useVersion '25.3.0'
            }
        }
    }
}
*/
apply plugin: 'com.google.gms.google-services'
